re-ordered files

--- a/online_retail.ipynb
+++ b/online_retail.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 1,
    "id": "2b1d3bd8",
    "metadata": {},
    "outputs": [],
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 2,
    "id": "b588ecbb",
    "metadata": {},
    "outputs": [
@@ -76,8 +76,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\dante\\AppData\\Local\\Temp\\ipykernel_13784\\3654798592.py:9: UserWarning: Could not infer format, so each element will be parsed individually, falling back to `dateutil`. To ensure parsing is consistent and as-expected, please specify a format.\n",
-      "  df2 = pd.read_csv(\"Online_Retail.csv\",encoding='ISO-8859-1', parse_dates=['InvoiceDate'])\n"
+      "C:\\Users\\dante\\AppData\\Local\\Temp\\ipykernel_14380\\2447518976.py:9: UserWarning: Could not infer format, so each element will be parsed individually, falling back to `dateutil`. To ensure parsing is consistent and as-expected, please specify a format.\n",
+      "  df2 = pd.read_csv(\"assets/Online_Retail.csv\",encoding='ISO-8859-1', parse_dates=['InvoiceDate'])\n"
      ]
     },
     {
@@ -106,12 +106,12 @@
     "# a. Load the datasets and inpect the columns\n",
     "\n",
     "# First\n",
-    "df1 =pd.read_csv(\"online_retail_II.csv\",encoding='ISO-8859-1', parse_dates=['InvoiceDate'])\n",
+    "df1 =pd.read_csv(\"assets/online_retail_II.csv\",encoding='ISO-8859-1', parse_dates=['InvoiceDate'])\n",
     "df1.columns\n",
     "df1.info()\n",
     "\n",
     "# second\n",
-    "df2 = pd.read_csv(\"Online_Retail.csv\",encoding='ISO-8859-1', parse_dates=['InvoiceDate'])\n",
+    "df2 = pd.read_csv(\"assets/Online_Retail.csv\",encoding='ISO-8859-1', parse_dates=['InvoiceDate'])\n",
     "df2.columns\n",
     "df2.info()"
    ]
